--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@types/node": "20.10.5",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
