--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.2",
     "@mui/icons-material": "^5.15.1",
     "@mui/material": "^5.15.1",
+    "@mui/styled-engine": "^5.15.1",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
     "lodash": "^4.17.21",
     "next": "14.0.4",
+    "next-transpile-modules": "^10.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
