--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/styled-engine": "^5.15.1",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
+    "chart.js": "^4.4.1",
     "lodash": "^4.17.21",
     "next": "14.0.4",
     "next-transpile-modules": "^10.0.1",
