--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "14.0.4",
     "next-transpile-modules": "^10.0.1",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
     "react-query": "^3.39.3",
