--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
     "react-query": "^3.39.3",
+    "react-redux": "9.0.4",
     "react-toastify": "^9.1.3",
+    "redux": "5.0.1",
     "use-debounce": "^10.0.0",
     "yup": "^1.3.3"
   },
