--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/icons-material": "^5.15.1",
     "@mui/material": "^5.15.3",
     "@mui/styled-engine": "^5.15.1",
+    "@mui/x-data-grid": "^6.18.7",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
     "chart.js": "^4.4.1",
