--- a/package.json
+++ b/package.json
@@ -26,16 +26,19 @@
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
     "react-query": "^3.39.3",
+    "react-redux": "^9.1.0",
     "react-toastify": "^9.1.3",
     "use-debounce": "^10.0.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.3.1",
+    "@types/node": "20.11.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "postcss": "^8",
     "prettier": "3.1.1",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "5.3.3"
   }
 }
