--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "eslint": "^8",
     "postcss": "^8",
     "prettier": "3.1.1",
-    "tailwindcss": "^3.3.0",
-    "typescript": "5.3.3"
+    "tailwindcss": "^3.3.0"
   }
 }
