--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "@emotion/cache": "^11.11.0",
-    "@hookform/resolvers": "^3.3.2",
+    "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.15.1",
     "@mui/material": "^5.15.3",
     "@mui/material-nextjs": "^5.15.3",
     "@mui/styled-engine": "^5.15.1",
     "@reduxjs/toolkit": "^2.0.1",
+    "@tanstack/react-query": "^5.22.2",
     "axios": "^1.6.2",
     "chart.js": "^4.4.1",
     "lodash": "^4.17.21",
@@ -25,7 +26,6 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
-    "react-query": "^3.39.3",
     "react-redux": "^9.1.0",
     "react-toastify": "^9.1.3",
     "use-debounce": "^10.0.0",
