<UI> Update admin layout file

--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.4",
+    "@mui/base": "^5.0.0-beta.36",
     "@mui/icons-material": "^5.15.1",
-    "@mui/material": "^5.15.3",
+    "@mui/lab": "^5.0.0-alpha.165",
+    "@mui/material": "^5.15.10",
     "@mui/material-nextjs": "^5.15.3",
     "@mui/styled-engine": "^5.15.1",
     "@reduxjs/toolkit": "^2.0.1",
@@ -22,6 +26,7 @@
     "lodash": "^4.17.21",
     "material-react-table": "^2.4.1",
     "next": "14.0.4",
+    "next-nprogress-bar": "^2.1.2",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
