--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tanstack/react-query": "^5.22.2",
     "axios": "^1.6.2",
     "chart.js": "^4.4.1",
+    "cookies-next": "^4.1.1",
     "lodash": "^4.17.21",
     "material-react-table": "^2.4.1",
     "next": "14.0.4",
