--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-hook-form": "^7.49.2",
     "react-redux": "^9.1.0",
     "react-toastify": "^9.1.3",
+    "sass": "^1.71.1",
     "use-debounce": "^10.0.0",
     "yup": "^1.3.3"
   },
