--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.3.1",
-    "@types/node": "20.11.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
+    "eslint-config-next": "^14.1.0",
     "postcss": "^8",
     "prettier": "3.1.1",
     "tailwindcss": "^3.3.0"
