--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/styled-engine": "^5.15.1",
     "@reduxjs/toolkit": "^2.0.1",
     "@tanstack/react-query": "^5.22.2",
+    "@vercel/speed-insights": "^1.0.10",
     "axios": "^1.6.2",
     "chart.js": "^4.4.1",
     "cookies-next": "^4.1.1",
