--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.6.2",
     "chart.js": "^4.4.1",
     "cookies-next": "^4.1.1",
+    "export-to-csv": "^1.2.4",
     "lodash": "^4.17.21",
     "material-react-table": "^2.4.1",
     "next": "14.0.4",
